--- a/proyecto-isa/secciones/contacto.html
+++ b/proyecto-isa/secciones/contacto.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="apellidos,nombre,correo electrónico,categoría contacto, mensaje,sublimaciones,lycra,estampados,ropa,inicio,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
-    <meta name="description" content="Este espacio es para dejar toda la informacion de contacto, asi nosostros podemos tener mayor comunciacion con el cliente.">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <meta name="keywords"
+        content="apellidos,nombre,correo electrónico,categoría contacto, mensaje,sublimaciones,lycra,estampados,ropa,inicio,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+    <meta name="description"
+        content="Este espacio es para dejar toda la informacion de contacto, asi nosostros podemos tener mayor comunciacion con el cliente.">
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
@@ -53,7 +59,6 @@
         <h1>contacto</h1>
         <h2 class="formulario-letra">Formulario</h2>
 
-
         <div class="content">
             <h1 class="logo-contact">Conocenos <span>mas</span></h1>
             <div class="contact-wrapper">
@@ -73,7 +78,7 @@
                             <input type="tel" name="tel">
                         </p>
                         <p class="block">
-                            <label >Mensaje</label>
+                            <label>Mensaje</label>
                             <textarea name="mensaje" rows="3"></textarea>
                         </p>
                         <p class="block">
@@ -89,24 +94,42 @@
                         <li><i class="fas fa-envelope-open-text"></i>ysacanser70@gmai.com</li>
                     </ul>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quam earum, vitae explicabo voluptatum deserunt?
+                        Contacto
                     </p>
-                    <p>Company.com</p>
+                    <p>CraacinesYsa.com</p>
                 </div>
             </div>
         </div>
 
+        <h3>Comentarios: </h3>
+        <div id="opinion"></div>
     </main>
 
+
+
     <footer>
+
         <p class="texto-footer">Nuestas redes Sociales</p>
         <section>
-          <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
-          <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-          <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-          <p class="copyright">© 2023 Creaciones ysa</p>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <p class="copyright">© 2023 Creaciones ysa</p>
         </section>
-      </footer>
+    </footer>
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--Sweet Alert  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- BS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+    </script>
+
+    <script src="../comentarios.js"></script>
+
 </body>
 
 </html>
