--- a/proyecto-isa/secciones/historia.html
+++ b/proyecto-isa/secciones/historia.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="historia,sobre nosotros,sublimaciones,lycra,estampados,ropa,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
-    <meta name="description" content="Somos fabricantes de indumentaria femenina desde 2018. Buscamos diseñar clásicos y atemporales para todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <meta name="keywords"
+        content="historia,sobre nosotros,sublimaciones,lycra,estampados,ropa,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+    <meta name="description"
+        content="Somos fabricantes de indumentaria femenina desde 2018. Buscamos diseñar clásicos y atemporales para todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.">
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
@@ -61,6 +67,8 @@
                 todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.
             </p>
         </section>
+
+       
     </main>
 
     <footer>
@@ -68,10 +76,22 @@
         <section>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
             <p class="copyright">© 2023 Creaciones ysa</p>
         </section>
     </footer>
+
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--Sweet Alert  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- BS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
