--- a/proyecto-isa/secciones/productos.html
+++ b/proyecto-isa/secciones/productos.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="talles especiales,modelos,productos,lycra,estampados,ropa,pantalones,indumentaria, mujer,abrigos,remera,tapados,talles,invierno,verano">
-    <meta name="description" content="Descubrí la nueva colección! Ropa de mujer de moda al mejor precio y calidad. Renovate con prendas como remeras, camisas, pantalones, abrigos y más.">
+    <meta name="keywords"
+        content="talles especiales,modelos,productos,lycra,estampados,ropa,pantalones,indumentaria, mujer,abrigos,remera,tapados,talles,invierno,verano">
+    <meta name="description"
+        content="Descubrí la nueva colección! Ropa de mujer de moda al mejor precio y calidad. Renovate con prendas como remeras, camisas, pantalones, abrigos y más.">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
@@ -53,80 +59,16 @@
     <main class="main-productos">
         <h1 class="producto-palabra">Productos</h1>
 
-        <div class="contenedor-productos">
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Remera Jersey </h2>
-                    <h3 class="producto-precio">$ 1300</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-22.jpg" alt="art-22">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Buzo friza estampado </h2>
-                    <h3 class="producto-precio">$ 1600</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-24.jpg" alt="art-24">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Polera lanilla </h2>
-                    <h3 class="producto-precio">$ 1400</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-28.jpg" alt="art-28">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">remera lanilla sublimado </h2>
-                    <h3 class="producto-precio">$ 1200</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-65.jpg" alt="art-65">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Remera jaspeado</h2>
-                    <h3 class="producto-precio">$ 1200</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-70.jpg" alt="art-70">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Remera spum sublimada </h2>
-                    <h3 class="producto-precio">$ 1000</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Remera Jersey </h2>
-                    <h3 class="producto-precio">$ 1300</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
-
-            <div class="producto">
-                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
-                <div class="producto-detalle">
-                    <h2 class="producto-titulo">Remera Jersey </h2>
-                    <h3 class="producto-precio">$ 1300</h3>
-                    <button class="producto-agregar">agregar</button>
-                </div>
-            </div>
+        <div id="contenedorProductos">
 
         </div>
+
+        <h3>El total de la compra es de <span id="total"></span> </h3>
+        <button class="btn btn-success" id="verCarrito"> Ver Carrito </button>
+        <button class="btn colorBoton" id="vaciarCarrito"> Vaciar Carrito </button>
+        <button class="btn btn-danger" id="finalizarCarrito"> Finalizar Carrito </button>
+
+        <div id="contenedorCarrito" class="row"></div>
     </main>
 
     <footer>
@@ -134,11 +76,26 @@
         <section>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
             <p class="copyright">© 2023 Creaciones ysa</p>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--Sweet Alert  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- BS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+    </script>
+
+    <script src="../main.js"></script>
 </body>
 
 </html>
